8129847: Compiling methods generated by Nashorn triggers high memory usage in C2

Add a new compiler phase, PhaseRenumberLive, that renumbers live nodes.

Reviewed-by: kvn, thartmann, vlivanov, shade